--- a/report/report.tex
+++ b/report/report.tex
@@ -87,13 +87,13 @@
         This can be achieved by means of a nonlinear \textit{activation function}:
         
         $$
-        \sigma \colon (-\infty, \infty) \to (0, 1)
+        \sigma \colon (-\infty, \infty) \to (0, 1) \,.
         $$
         
         In later sections we will consider other activation functions, but for logistic regression we typically use the \textit{sigmoid} function,
             
         $$
-        \sigma_2(z) = \frac{1}{1 + e^{-z}}
+        \sigma_2(z) = \frac{1}{1 + e^{-z}} \,.
         $$
         
         
@@ -113,10 +113,10 @@
         In order to assess how well the model is performing, we shall require some sort of "penalty value" based on the dissimilarity between $a$ and $y$. For example, the \textit{binary cross-entropy} is defined as follows:
         
         $$
-        CE(\boldsymbol{\theta}) = \begin{cases}
+        CE(a, y \ \vert \ \boldsymbol{\theta}) = \begin{cases}
             -\log(a) & y = 1 \\
             -\log(1-a) & y = 0
-        \end{cases}
+        \end{cases} \,.
         $$
         
         
@@ -130,22 +130,13 @@
         For that purpose, we generally consider some \textit{cost function} $J(\boldsymbol{\theta})$ which combines the individual costs from each observation. Such a function effectively quantifies how "wrong" the model is, so when adjusting $\boldsymbol{\theta}$ we will be aiming to minimise $J(\boldsymbol{\theta})$. A typical choice for binary classification problems is the \textit{binary cross-entropy cost function}:
         
         $$
-        J_2(\boldsymbol{\theta}) = \frac{1}{m} \sum_{i=1}^{m} CE(\boldsymbol{\theta}) = - \frac{1}{m} \sum_{i=1}^{m} \left( y_i \log(a_i) + (1 - y_i) \log(1 - a_i) \right)
+        J_2(\boldsymbol{\theta}) = \frac{1}{m} \sum_{i=1}^{m} CE(\boldsymbol{\theta}) = - \frac{1}{m} \sum_{i=1}^{m} \left( y_i \log(a_i) + (1 - y_i) \log(1 - a_i) \right) \,.
         $$
         
         Since $y_i \in \{0, 1\}$, at most one of the terms in the body of the summation is non-zero for each $i$; and so $J_2(\boldsymbol{\theta})$ is simply the average cross-entropy across all $m$ observations in our dataset.
     
     
-    
-    \subsection{Regularisation}
-        
-        % TODO
-        
-        Dissuading specificity
-        
-        \textit{overfitting}
-        
-        
+
     \subsection{Training} \label{sec:gradient_descent}
         
         As described at the end of Section \ref{sec:costfun}, the goal of the \textit{training} process is to minimise the cost function $J(\boldsymbol{\theta})$ by making changes to the parameters $\boldsymbol{\theta}$: in other words, we essentially have an optimisation problem, which we can tackle in countless different ways.
@@ -160,13 +151,13 @@
             Consider a perturbation $\Delta \boldsymbol{\theta}$ to our current parameters $\boldsymbol{\theta} \in \mathbb{R}^{n+1}$, and notice that a Taylor expansion yields
             
             $$
-            J(\boldsymbol{\theta} + \Delta \boldsymbol{\theta}) = J(\boldsymbol{\theta}) + \sum_{k=0}^{n+1} \frac{\partial J(\boldsymbol{\theta})}{\partial \theta_k} (\Delta \boldsymbol{\theta})_k + \mathcal{O} ((\Delta \boldsymbol{\theta})^2)
+            J(\boldsymbol{\theta} + \Delta \boldsymbol{\theta}) = J(\boldsymbol{\theta}) + \sum_{k=0}^{n+1} \frac{\partial J(\boldsymbol{\theta})}{\partial \theta_k} (\Delta \boldsymbol{\theta})_k + \mathcal{O} ((\Delta \boldsymbol{\theta})^2) \,.
             $$
             
             Then ignoring higher-order terms, we have
             
             $$
-            J(\boldsymbol{\theta} + \Delta \boldsymbol{\theta}) \approx J(\boldsymbol{\theta}) + \nabla J(\boldsymbol{\theta})^\top \Delta \boldsymbol{\theta}
+            J(\boldsymbol{\theta} + \Delta \boldsymbol{\theta}) \approx J(\boldsymbol{\theta}) + \nabla J(\boldsymbol{\theta})^\top \Delta \boldsymbol{\theta} \,.
             $$
             
             Now we greedily choose $\Delta \boldsymbol{\theta}$ such that we reduce $J(\boldsymbol{\theta})$ by as much as possible - i.e. by making $\nabla J(\boldsymbol{\theta})^\top \Delta \boldsymbol{\theta}$ as negative as possible. By the Cauchy-Schwarz inequality, the most negative value of $\mathbf{f}^\top \mathbf{g}$ for any $\mathbf{f}, \mathbf{g} \in \mathbb{R}^{n+1}$ is $- \lVert \mathbf{f} \rVert_2 \lVert \mathbf{g} \rVert_2$, when $\mathbf{f} = -\mathbf{g}$. Therefore we shall choose $\Delta \boldsymbol{\theta} = - \nabla J(\boldsymbol{\theta})$ as our \textit{descent direction}. Note that $\nabla J(\boldsymbol{\theta})^\top (- \nabla J(\boldsymbol{\theta})) = -\lVert \nabla J(\boldsymbol{\theta}) \rVert_2^2 \leq 0$ with equality if and only if $\nabla J(\boldsymbol{\theta}) = 0$, and consequently $J(\boldsymbol{\theta} + \Delta \boldsymbol{\theta}) < J(\boldsymbol{\theta})$ so long as $\nabla J(\boldsymbol{\theta}) \neq 0$.
@@ -240,7 +231,7 @@
         y_k = \begin{cases}
             1 & \text{observation belongs to class } k \\
             0 & \text{otherwise}
-        \end{cases}
+        \end{cases} \,.
         $$
         
         Thus we can train the $k$th model to produce an output of 1, and the other $(n-1)$ models to produce an output of 0; and consequently we can obtain a prediction for the class of a new observation by seeing which model produces the output closest to 1.
@@ -250,7 +241,7 @@
         This motivates the introduction of a new activation function, the \textit{softmax} function: if $\mathbf{z} \in \mathbb{R}^n$, then for $j = 1, \ldots, n$,
         
         $$
-        \sigma(z_j) = \frac{e^{z_j}}{\sum_{k=1}^{n} e^{z_k}}
+        \sigma(z_j) = \frac{e^{z_j}}{\sum_{k=1}^{n} e^{z_k}} \,.
         $$
         
         Since this is a normalisation of the exponentiated raw output $\mathbf{z}$, the elements of the resulting vector $\mathbf{a}$ sum to 1; and therefore each of these $n$ values can be interpreted as the probability of $x$ belonging to that class.
@@ -273,7 +264,7 @@
                 &= \frac{e^{z_j - c}}{\sum_{k=1}^{n} e^{z_k - c}} \\
                 &= \frac{e^{-c} e^{z_j}}{\sum_{k=1}^{n} e^{-c} e^{z_k}} \\
                 &= \frac{e^{z_j}}{\sum_{k=1}^{n} e^{z_k}} \\
-                &= \sigma(z_j)
+                &= \sigma(z_j) \,.
             \end{aligned} $$
             
         \end{proof}
@@ -283,7 +274,7 @@
         The \textit{multiclass cross-entropy cost function} is typically used with multiclass softmax outputs:
         
         $$
-        J(\boldsymbol{\theta}) = \frac{1}{m} \sum_{i=1}^{m} \left( - \sum_{k=1}^{n} (\mathbf{y_i})_k \log(\mathbf{(a_i)}_k) \right)
+        J(\boldsymbol{\theta}) = \frac{1}{m} \sum_{i=1}^{m} \left( - \sum_{k=1}^{n} (\mathbf{y_i})_k \log(\mathbf{(a_i)}_k) \right) \,.
         $$
         
         Note that this is in fact a generalisation of the binary cross-entropy cost function: since $\mathbf{y_i}$ is a one-hot vector, only one term of the inner summation is non-zero, just as only one of the two terms in the binary cross-entropy is non-zero.
@@ -307,13 +298,13 @@
         
         \begin{itemize}
             
-            \item A superscript index will be used to indicate the layer which produces each output, i.e. in an $L$-layer network we will have $\mathbf{z}^{(l)}$ and $\mathbf{a}^{(l)}$ for $l = 1, \ldots, L$
+            \item A superscript index will be used to indicate the layer which produces each output, i.e. in an $L$-layer network we will have $\mathbf{z}^{(l)}$ and $\mathbf{a}^{(l)}$ for $l = 1, \ldots, L$.
             
-            \item We shall denote the dimension of these vectors as $n_l$ for each $l$
+            \item We shall denote the dimension of these vectors as $n_l$ for each $l$.
             
             \item A bias unit $a_0 = 1$ is prepended as the first element of each output $\mathbf{a}^{(l)}$ before it is used as the input to the next layer.
             
-            \item Each neuron in layer $l$ will consequently contain $(n_{l-1} + 1)$ weights; the weights for the $n_l$ models in each layer shall be stored as the rows of a matrix $\theta^{(l)} \in \mathbb{R}^{n_l, (n_{l-1}+1)}$, so the $i$th weight from the $j$th neuron in the layer which produces $\mathbf{a}^{(l)}$ is $\theta^{(l)}_{i,j}$
+            \item Each neuron in layer $l$ will consequently contain $(n_{l-1} + 1)$ weights; the weights for the $n_l$ models in each layer shall be stored as the rows of a matrix $\theta^{(l)} \in \mathbb{R}^{n_l, (n_{l-1}+1)}$, so the $i$th weight from the $j$th neuron in the layer which produces $\mathbf{a}^{(l)}$ is $\theta^{(l)}_{i,j}$.
         
         \end{itemize}
         
@@ -331,7 +322,7 @@
         Before starting, we define a useful intermediate quantity: the \textit{error} of layer $l$, $\boldsymbol{\delta}^{(l)} \in \mathbb{R}^{n_l}$, with components defined for $j = 1, \ldots, n_l$ by
         
         $$
-        \delta^{(l)}_j = \frac{\partial J}{\partial z^{(l)}_j}
+        \delta^{(l)}_j = \frac{\partial J}{\partial z^{(l)}_j} \,.
         $$
         
         The $j$th component of this error vector is a measure of the sensitivity of the cost function $J$ to the (weighted) output from neuron $j$ in layer $l$. Although it is not exactly a direct measure of how much a particular neuron is at fault for mistakes in the network's eventual output, such an explanation is at least valid intuitively, since all partial derivatives must be zero if the cost function is at a minimum.
@@ -341,10 +332,10 @@
         
         \begin{lemma} \label{thm:init_sigmoid}
             
-            If $J_2$ is the binomial cross-entropy cost function, and $\sigma_2$ is the sigmoid activation function, then for all $j = 1, \ \ldots, \ n_L$
+            If $J_2$ is the binomial cross-entropy cost function, and $\sigma_2$ is the sigmoid activation function, then for all $j = 1, \ \ldots, \ n_L$,
             
             $$
-            \delta^{(L)}_j = a^{(L)}_j - y_j
+            \delta^{(L)}_j = a^{(L)}_j - y_j \,.
             $$
             
         \end{lemma}
@@ -356,7 +347,7 @@
             $$ \begin{aligned}
             \frac{\partial J_2}{\partial a^{(L)}_i}
             &= \frac{\partial}{\partial a^{(L)}_i} \left( - y_i \log(a^{(L)}_i) - (1 - y_i) \log(1 - a^{(L)}_i) \right) \\
-            &= - \frac{y_i}{a^{(L)}_i} + \frac{1 - y_i}{1 - a^{(L)}_i}
+            &= - \frac{y_i}{a^{(L)}_i} + \frac{1 - y_i}{1 - a^{(L)}_i} \,.
             \end{aligned} $$
             
             Consider now the partial derivative of the activated output of layer $L$, with respect to the non-activated output; that is,
@@ -364,7 +355,7 @@
             $$ \begin{aligned}
             \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j}
             &= \frac{\partial}{\partial z^{(L)}_j} \left( \sigma_2(z^{(L)}_j) \right)
-            &= \frac{\partial}{\partial z^{(L)}_j} \left( \frac{1}{1 + e^{-z^{(L)}_i}} \right)
+            &= \frac{\partial}{\partial z^{(L)}_j} \left( \frac{1}{1 + e^{-z^{(L)}_i}} \right) \,.
             \end{aligned} $$
                 
             Note that if $i \neq j$ then this is clearly zero. If $i = j$,
@@ -375,7 +366,7 @@
             &= \frac{e^{-z^{(L)}_j}}{\left( 1 + e^{-z^{(L)}_j} \right) \left( 1 + e^{-z^{(L)}_j} \right)} \\
             &= \left( \frac{1}{1 + e^{-z^{(L)}_j}} \right) \left( \frac{\left( 1 + e^{-z^{(L)}_j} \right) - 1}{1 + e^{-z^{(L)}_j}} \right) \\
             &= \sigma_2(z^{(L)}_j) \left( 1 - \sigma_2(z^{(L)}_j) \right) \\
-            &= a^{(L)}_j \left( 1 - a^{(L)}_j \right)
+            &= a^{(L)}_j \left( 1 - a^{(L)}_j \right) \,.
             \end{aligned} $$
             
             Now using the definition of $\boldsymbol{\delta}^{(L)}$ and the chain rule,
@@ -387,7 +378,7 @@
             &= \frac{\partial J_2}{\partial a^{(L)}_j} \ \frac{\partial a^{(L)}_j}{\partial z^{(L)}_j} + 0 \\
             &= \left( - \frac{y_j}{a^{(L)}_j} + \frac{1 - y_j}{1 - a^{(L)}_j} \right) a^{(L)}_j \left( 1 - a^{(L)}_j \right) \\
             &= a^{(L)}_j (1 - y_j) - y_j (1 - a^{(L)}_j) \\
-            &= a^{(L)}_j - y_j
+            &= a^{(L)}_j - y_j \,.
             \end{aligned} $$
             
         \end{proof}
@@ -395,10 +386,10 @@
         
         \begin{lemma} \label{thm:init_softmax}
             
-            If $J$ is the multiclass cross-entropy cost function, and $\sigma$ is the softmax activation function, then for all $j = 1, \ \ldots, \ n_L$
+            If $J$ is the multiclass cross-entropy cost function, and $\sigma$ is the softmax activation function, then for all $j = 1, \ \ldots, \ n_L$,
             
             $$
-            \delta^{(L)}_j = a^{(L)}_j - y_j
+            \delta^{(L)}_j = a^{(L)}_j - y_j \,.
             $$
             
         \end{lemma}
@@ -411,7 +402,7 @@
             $$ \begin{aligned}
             \frac{\partial J}{\partial a^{(L)}_i}
             &= \frac{\partial}{\partial a^{(L)}_i} \left( - \sum_{k=1}^{n_L} y_k \log(a^{(L)}_k) \right) \\
-            &= - \frac{y_i}{a^{(L)}_i}
+            &= - \frac{y_i}{a^{(L)}_i} \,.
             \end{aligned} $$
             
             
@@ -420,7 +411,7 @@
             $$ \begin{aligned}
             \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j}
             &= \frac{\partial}{\partial z^{(L)}_j} \left( \frac{e^{z^{(L)}_i}}{\sum_{k=1}^{n_L} e^{z^{(L)}_k}} \right) \\
-            &= \frac{\left( \frac{\partial \left( e^{z^{(L)}_i}\right)}{\partial z^{(L)}_j} \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right) - e^{z^{(L)}_i} e^{z^{(L)}_j}}{\left( \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right)^2}
+            &= \frac{\left( \frac{\partial \left( e^{z^{(L)}_i}\right)}{\partial z^{(L)}_j} \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right) - e^{z^{(L)}_i} e^{z^{(L)}_j}}{\left( \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right)^2} \,.
             \end{aligned} $$
             
             \begin{itemize}
@@ -431,7 +422,7 @@
                 \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j}
                 &= \frac{0 - e^{z_i} e^{z_j}}{\left( \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right)^2} \\
                 &= - \sigma(z_i) \sigma(z_j) \\
-                &= - a^{(L)}_i a^{(L)}_j
+                &= - a^{(L)}_i a^{(L)}_j \,.
                 \end{aligned} $$
             
                 \item On the other hand, if $i = j$,
@@ -441,7 +432,7 @@
                 &= \frac{\left( e^{z^{(L)}_j} \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right) - \left( e^{z^{(L)}_j} \right)^2}{\left( \sum_{k=1}^{n_L} e^{z^{(L)}_k} \right)^2} \\
                 &= \frac{e^{z^{(L)}_j}}{\sum_{k=1}^{n_L} e^{z^{(L)}_k}} \left( 1 - \frac{e^{z^{(L)}_j}}{\sum_{k=1}^{n_L} e^{z^{(L)}_k}} \right) \\
                 &= \sigma(z^{(L)}_j) \left( 1 - \sigma(z^{(L)}_j) \right) \\
-                &= a^{(L)}_j \left( 1 - a^{(L)}_j \right)
+                &= a^{(L)}_j \left( 1 - a^{(L)}_j \right) \,.
                 \end{aligned} $$
             
             \end{itemize}
@@ -453,14 +444,14 @@
             &= \sum_{i=1}^{n_L} \left( \frac{\partial J(\theta)}{\partial a^{(L)}_i} \ \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j} \right) \\
             &= \frac{\partial J(\theta)}{\partial a^{(L)}_j} \ \frac{\partial a^{(L)}_j}{\partial z^{(L)}_j} + \sum_{\substack{i=1 \\ i \neq j}}^{n_L} \left( \frac{\partial J(\theta)}{\partial a^{(L)}_i} \ \frac{\partial a^{(L)}_i}{\partial z^{(L)}_j} \right) \\
             &= - \frac{y_j}{a^{(L)}_j} \left( a^{(L)}_j (1 - a^{(L)}_j) \right) + \sum_{\substack{i=1 \\ i \neq j}}^{n_L} \left( - \frac{y_i}{a^{(L)}_i} \left(- a^{(L)}_i a^{(L)}_j \right) \right) \\
-            &= - y_j (1 - a^{(L)}_j) + a^{(L)}_j \left( \sum_{i=1}^{n_L} \left( y_i \right) - y_j \right)
+            &= - y_j (1 - a^{(L)}_j) + a^{(L)}_j \left( \sum_{i=1}^{n_L} \left( y_i \right) - y_j \right) \,.
             \end{aligned} $$
             
             This looks slightly complicated, but recall that $\mathbf{y}$ is a one-hot encoded vector, and therefore $\sum_{=1}^{n_L} y_i = 1$. Hence we have
             
             $$ \begin{aligned}
             \delta^{(L)}_j &= - y_j (1 - a^{(L)}_j) + a^{(L)}_j (1 - y_j) \\
-            &= a^{(L)}_j - y_j
+            &= a^{(L)}_j - y_j \,.
             \end{aligned} $$
             
         \end{proof}
@@ -474,7 +465,7 @@
             For all $i = 1, \ \ldots, \ n_l$ and $j = 0, \ \ldots, \ n_{l-1}$, and all $l = 2, \ldots, L$,
             
             $$
-            \frac{\partial z^{(l)}_i}{\partial a^{(l-1)}_j} = \theta^{(l)}_{i,j}
+            \frac{\partial z^{(l)}_i}{\partial a^{(l-1)}_j} = \theta^{(l)}_{i,j} \,.
             $$
             
         \end{lemma}
@@ -486,7 +477,7 @@
             $$ \begin{aligned}
             \frac{\partial z^{(l)}_i}{\partial a^{(l-1)}_j}
             &= \frac{\partial}{\partial a^{(l-1)}_j} \left( \sum_{k=0}^{n_{l-1}} a^{(l-1)}_k \theta^{(l)}_{i,k} \right) \\
-            &= \theta^{(l)}_{i,j}
+            &= \theta^{(l)}_{i,j} \,.
             \end{aligned} $$
             
         \end{proof}
@@ -499,7 +490,7 @@
             $$
             \frac{\partial a^{(l)}_i}{\partial z^{(l)}_j} = \begin{cases}
                 \sigma'(z^{(l)}_j) & i = j \\
-                0 & i \neq j
+                0 & i \neq j \,.
             \end{cases}
             $$
             
@@ -520,7 +511,7 @@
             For $j = 1, \ldots, n_l$, and for $l = 2, \ldots, L-1$,
             
             $$
-            \delta^{(l)}_j = \sigma'(z^{(l)}_j) \sum_{i=1}^{n_l} \left( \delta^{(l+1)}_i \theta^{(l+1)}_{i,j} \right)
+            \delta^{(l)}_j = \sigma'(z^{(l)}_j) \sum_{i=1}^{n_l} \left( \delta^{(l+1)}_i \theta^{(l+1)}_{i,j} \right) \,.
             $$
             
         \end{theorem}
@@ -533,7 +524,7 @@
             \delta^{(l)}_j
             &= \frac{\partial J}{\partial z^{(l)}_j} \\
             &= \sum_{i=1}^{n_{l+1}} \left( \frac{\partial J}{\partial z^{(l+1)}_i} \frac{\partial z^{(l+1)}_i}{\partial z^{(l)}_j} \right) \\
-            &= \sum_{i=1}^{n_{l+1}} \left( \delta^{(l+1)}_i \frac{\partial z^{(l+1)}_i}{\partial z^{(l)}_j} \right)
+            &= \sum_{i=1}^{n_{l+1}} \left( \delta^{(l+1)}_i \frac{\partial z^{(l+1)}_i}{\partial z^{(l)}_j} \right) \,.
             \end{aligned} $$
             
             Then considering the remaining differential term, and using the chain rule once again, observe that
@@ -542,7 +533,7 @@
             \frac{\partial z^{(l+1)}_i}{\partial z^{(l)}_j}
             &= \sum_{k=0}^{n_l} \left( \frac{\partial z^{(l+1)}_i}{\partial a^{(l)}_k} \frac{\partial a^{(l)}_k}{\partial z^{(l)}_j} \right) \\
             &= \sum_{k=0}^{n_l} \left( \theta^{(l+1)}_{i,k} \frac{\partial a^{(l)}_k}{\partial z^{(l)}_j} \right) & \text{by Lemma \ref{thm:dz_da}} \\
-            &= \theta^{(l+1)}_{i,j} \sigma'(z^{(l)}_j) & \text{by Lemma \ref{thm:da_dz}}
+            &= \theta^{(l+1)}_{i,j} \sigma'(z^{(l)}_j) & \text{by Lemma \ref{thm:da_dz}} \,.
             \end{aligned} $$
             
             Therefore combining these results, we have that
@@ -550,7 +541,7 @@
             $$ \begin{aligned}
             \delta^{(l)}_j
             &= \sum_{i=1}^{n_{l+1}} \left( \delta^{(l+1)}_i \theta^{(l+1)}_{i,j} \sigma'(z^{(l)}_j) \right) \\
-            &= \sigma'(z^{(l)}_j) \sum_{i=1}^{n_l} \left( \delta^{(l+1)}_i \theta^{(l+1)}_{i,j} \right)
+            &= \sigma'(z^{(l)}_j) \sum_{i=1}^{n_l} \left( \delta^{(l+1)}_i \theta^{(l+1)}_{i,j} \right) \,.
             \end{aligned} $$
             
         \end{proof}
@@ -568,7 +559,7 @@
             $$
             \frac{\partial z^{(l)}_p}{\partial \theta^{(l)}_{i,j}} = \begin{cases}
                 0 & p \neq i \\
-                a^{(l-1)}_j & p = i
+                a^{(l-1)}_j & p = i \,.
             \end{cases}
             $$
             
@@ -581,7 +572,7 @@
             $$ \begin{aligned}
             \frac{\partial z^{(l)}_p}{\partial \theta^{(l)}_{i,j}}
             &= \frac{\partial}{\partial \theta^{(l)}_{i,j}} \left( \sum_{k=0}^{n_{l-1}} \theta^{(l)}_{p,k} a^{(l-1)}_k \right) \\
-            &= \sum_{k=0}^{n_{l-1}} \frac{\partial}{\partial \theta^{(l)}_{i,j}} \left( \theta^{(l)}_{p,k} a^{(l-1)}_k \right)
+            &= \sum_{k=0}^{n_{l-1}} \frac{\partial}{\partial \theta^{(l)}_{i,j}} \left( \theta^{(l)}_{p,k} a^{(l-1)}_k \right) \,.
             \end{aligned} $$
             
             The result follows by noting that all terms in the summation, or all-but-one terms if $p = i$, are zero.
@@ -597,7 +588,7 @@
             For all $i = 1, \ \ldots, \ n_l$ and $j = 0, \ \ldots, \ n_{l-1}$, and all $l = 2, \ldots, L$,
             
             $$
-            \frac{\partial J}{\partial \theta^{(l)}_{i,j}} = \delta^{(l)}_i a^{(l-1)}_j
+            \frac{\partial J}{\partial \theta^{(l)}_{i,j}} = \delta^{(l)}_i a^{(l-1)}_j \,.
             $$
             
         \end{theorem}
@@ -610,7 +601,7 @@
             \frac{\partial J}{\partial \theta^{(l)}_{i,j}}
             &= \sum_{k=1}^{n_l} \left( \frac{\partial J}{\partial z^{(l)}_k} \ \frac{\partial z^{(l)}_k}{\partial \theta^{(l)}_{i,j}} \right) \\
             &= \sum_{k=1}^{n_l} \left( \delta^{(l)}_k \frac{\partial z^{(l)}_k}{\partial \theta^{(l)}_{i,j}} \right) \\
-            &= \delta^{(l)}_i a^{(l-1)}_j
+            &= \delta^{(l)}_i a^{(l-1)}_j \,.
             \end{aligned}$$
         
         \end{proof}
@@ -626,31 +617,68 @@
         In Section \ref{sec:gradient_descent} we discussed the update to be made to the weights in the logistic regression model - concretely, a step in the direction of steepest descent $\nabla J(\boldsymbol{\theta})$. If we consider $\boldsymbol{\theta}$ to be a concatenated vector of the unrolled weight matrices, i.e.
         
         $$
-        \boldsymbol{\theta} = \left( \theta^{(2)}_{1,1}, \ \theta^{(2)}_{1,2}, \ \ldots, \ \theta^{(L)}_{n_L, (n_{L-1}+1)} \right)
+        \boldsymbol{\theta} = \left( \theta^{(2)}_{1,1}, \ \theta^{(2)}_{1,2}, \ \ldots, \ \theta^{(L)}_{n_L, (n_{L-1}+1)} \right) \,,
         $$
         
         then we can use gradient descent as the basis for the training process of the neural network too.
         
-        However, since there are vastly more weights in even a small neural network than in the logistic regression model, it will take a significantly longer amount of time to calculate the descent direction $\Delta \boldsymbol{\theta}$ at each iteration; and the potential for the model to overfit the training data is also greatly increased, due to the larger number of degrees of freedom in the model.
+        However, since there are vastly more weights in even a small neural network than in the logistic regression model, it will take a significantly longer amount of time to calculate the descent direction $\Delta \boldsymbol{\theta}$ at each iteration.
         
-        Some measures can however be taken in order to mitigate such issues, such as those described in the following subsections.        
+        Moreover, the potential for the model to \textit{overfit} the training data by learning overly specific patterns (such as noise in the training dataset) is also greatly increased, due to the larger number of degrees of freedom in the model. Usually, we will want to use our model to make predictions based on new data, rather than predicting the already-known labels of our training dataset; and therefore we would like to produce a model which will \textit{generalise}, performing as well on unseen data as possible.
+        
+        Thankfully, measures can be taken in order to mitigate the issues described above: several are outlined in the following subsections.
         
         
         \subsubsection{Mini-Batch Gradient Descent}
             
+            Given that we only have a certain amount of information available to us for training our model, we would of course like to take full advantage of it; and therefore the training process generally involves making multiple passes over the dataset, using it to determine the updates we will make to the weights in the model. Each pass is known as an \textit{epoch}: one training epoch has passed after each observation in the dataset has influenced an update to the model. This definition allows for several different interpretations of gradient descent.
             
-            \textit{epoch}
+            The simplest approach is \textit{(full-)batch gradient descent}: the costs of all $m$ observations in the training set are calculated and averaged, and then the descent direction is defined as $- \nabla J(\boldsymbol{\theta})$.
             
+            However there are certain serious downsides to this approach:
+            
+            \begin{itemize}
+                
+                \item The cost of every single observation in the dataset must be calculated before any update is made to the model's weights. This is potentially computationally expensive.
+                
+                \item The update which \textit{is} eventually made \textit{always} results in a smaller value of $J$. However, since $J$ is as a rule not a convex function, there are multiple minima; and by always moving in a strict descent direction, we risk converging to a "sharp minimum" where the weights we learn will give a model which does not generalise well to unseen data \cite{large_batch}.
+                
+            \end{itemize}
+            
+            \textit{Stochastic gradient descent} instead considers a subset of the training data: that is, taking some subset of indices $\mathcal{S}_i \subset \{1, \ \ldots, \ m\}$, we define our descent direction as
+            
+            $$
+            \Delta \boldsymbol{\theta} = - \nabla J(\boldsymbol{\theta}) \big\vert_{\mathcal{S}_i} = - \left( \frac{1}{\lvert \mathcal{S}_i \rvert} \sum_{k \in \mathcal{S}_i} CE(a^{(L)}_k, y_k \ \vert \ \boldsymbol{\theta}) \right) \,.
+            $$
+            
+            This stochastic gradient is essentially a "noisy" version of the true gradient $- \nabla J(\boldsymbol{\theta})$. Therefore if after a certain iteration we are sitting in a sharp minimum of the cost function, then by making an update to the weights based on the stochastic gradient we are likely to jump out of this minimum (since it is quite possible that it doesn't even exist in the stochastic version of the cost function surface). Therefore when using stochastic gradient descent we tend to converge to "flat" minima, where the performance of the model is usually close to its performance at the global minimum and where the model generalises well to unseen data \cite{loss_surfaces}
+            
+            The number of observations belonging to $\mathcal{S}_i$ becomes a \textit{hyperparameter} of the model (so called because the weights of the model are the standard parameters). This value, and the values of other hyperparameters which we will meet shortly, is chosen when setting up the training process.
+            
+            In \textit{mini-batch gradient descent}, in each training epoch the full training dataset is randomly separated into equally-sized sets (typically $32 \leq \lvert \mathcal{S}_i \rvert \leq 512$), and the model's weights are updated based on each set in turn. In this way multiple updates are made to the model during each training epoch, and we improve the chances of converging to a flat minimum of the cost function.
             
             
         
         \subsubsection{Validation and Testing}
-            
+        
             To reduce the likelihood that we overfit our model to the dataset, it is good practice to split the available data into separate \textit{training and validation sets}. The model is trained and the weights updated based on the training set; and then its performance on the validation set is assessed. Hyperparameters are adjusted to give optimal results on the validation set. Since the validation data is not used to update the weights in the network, this process should hopefully produce a model which generalises better to unseen data.
             
             The simplest implementation is \textit{holdout cross-validation}: some proportion of the available dataset is "held out" as the validation set for the duration of the training process. A more robust extension is \textit{$k$-fold cross-validation}: the available dataset is split into $k$ approximately equally-sized sections, and the training process is repeated $k$ times, where each section of the data in turn is considered as the validation set while the remaining sections form the training set. The performance metric from each of the $k$ repetitions can be somehow combined (usually averaged) to produce an overall value.
             
             As a final measure, it is usually sensible to split the available data still further - into training, validation sets and a \textit{test} set, which remains isolated and unused until all training and hyperparameter tuning is completed. The model's performance on this test set is as reliable an indicator as we can achieve of how well the model will perform on unseen data.
+        
+        
+            
+            
+        \subsubsection{Regularisation}
+        
+            % TODO
+            
+            Dissuading specificity
+        
+        
+        
+
             
 
 
